# python-project-52

./: .coverage  .env  .gitignore  Makefile  README.md  coverage.xml  db.sqlite3  pyproject.toml  pytest.ini
.github/workflows/: README.md  test.yml
locale/ru/LC_MESSAGES/: django.mo  django.po
static/: headers.css
task_manager/: settings.py
task_manager/labels/: models.py
task_manager/statuses/: models.py
task_manager/tasks/: models.py
task_manager/templates/: navigation.html
task_manager/templates/users/: users_list.html
task_manager/tests/: conftest.py  test_labels.py  test_statuses.py  test_tasks.py  test_users.py
