[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Evgenii <evgen.ak24@gmail.com>"]
readme = "README.md"
packages = [{ include = "task_manager" }]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
django = "^5.1.7"
gunicorn = "^23.0.0"
django-bootstrap4 = "^25.1"
whitenoise = "^6.9.0"
python-dotenv = "^1.1.0"
psycopg2-binary = "^2.9.10"
django-filter = "^25.1"
rollbar = "^1.3.0"
dj-database-url = "^2.3.0"

[tool.poetry.group.dev.dependencies]
flake8 = "5.0.4"
coverage = "^7.0.3"
pytest = "^8.3.5"
pytest-django = "^4.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

